@@ -6,15 +6,26 @@
 <div id="metadata" class="vcard">
 [% IF node_image %]
   <div id="node_image_box">
-    [% IF website %]<a href="[% website %]">[% END %]
-      <img id="node_image" src="[% node_image %]" alt="Picture of [% node_name %]" />
-    [% IF website %]</a>[% END %]
+    [% IF node_image_url %]<a href="[% node_image_url %]">[% END %]
+    <img id="node_image" src="[% node_image %]"
+         alt="Picture of [% node_name %]" />
+    [% IF node_image_url %]</a>[% END %]
+    [% IF node_image_copyright %]
+      <div id="node_image_copyright">
+        [% IF node_image_licence %]
+          <a href="[% node_image_licence %]">&copy;
+            [% node_image_copyright %]</a>
+        [% ELSE %]
+          &copy; [% node_image_copyright %]
+        [% END %]
+      </div>
+    [% END %]
   </div>
 [% ELSE %]
   <span id="node_no_image" />
 [% END %]
 
-  <!--- For the vcard --->
+  <!-- For the vcard -->
   <span class="fn" style="display:none">[% node_name %]</span>
 [% IF phone OR fax OR address OR postcode OR formatted_website_text
       OR hours_text OR map_link %] 
