@@ -1,0 +1,46 @@
+<tr>
+  <td class="label"><label for="node_image">URL to node Image:</label></td>
+  <td>
+    <input type="text" size="50" id="node_image" name="node_image" value="[% node_image %]" />
+    [% INCLUDE node_photo_notes.tt %]
+  </td>
+  [% IF conflict %]
+    <td>[% CGI.escapeHTML(new_node_image) %]</td>
+  [% END %]
+</tr>
+<tr>
+  <td class="label">
+    <label for="node_image_copyright">Name of image copyright holder:</label>
+  </td>
+  <td>
+    <input type="text" size="50" id="node_image_copyright"
+     name="node_image_copyright" value="[% node_image_copyright %]" />
+  </td>
+  [% IF conflict %]
+    <td>[% CGI.escapeHTML(new_node_image_copyright) %]</td>
+  [% END %]
+</tr>
+<tr>
+  <td class="label">
+    <label for="node_image_licence">URL of image licence:</label>
+  </td>
+  <td>
+    <input type="text" size="50" id="node_image_licence"
+     name="node_image_licence" value="[% node_image_licence %]" />
+  </td>
+  [% IF conflict %]
+    <td>[% CGI.escapeHTML(new_node_image_licence) %]</td>
+  [% END %]
+</tr>
+<tr>
+  <td class="label">
+    <label for="node_image_url">URL of image's info page:</label>
+  </td>
+  <td>
+    <input type="text" size="50" id="node_image_url"
+     name="node_image_url" value="[% node_image_url %]" />
+  </td>
+  [% IF conflict %]
+    <td>[% CGI.escapeHTML(new_node_image_url) %]</td>
+  [% END %]
+</tr>
